@@ -511,10 +511,15 @@ class TypesTest(TestBase):
         try:
             test_items = [decimal.Decimal(d) for d in '1500000.00000000000000000000',
                           '-1500000.00000000000000000000', '1500000',
-                          '0.0000000000000000002', '0.2', '-0.0000000000000000002',
-                          '156666.458923543', '-156666.458923543', '1', '-1', '1234',
+                          '0.0000000000000000002', '0.2', '-0.0000000000000000002', '-2E-2',
+                          '156666.458923543', '-156666.458923543', '1', '-1', '-1234', '1234',
                           '2E-12', '4E8', '3E-6', '3E-7', '4.1', '1E-1', '1E-2', '1E-3',
-                          '1E-4', '1E-5', '1E-6', '1E-7', '1E-8']
+                          '1E-4', '1E-5', '1E-6', '1E-7', '1E-1', '1E-8', '0.2732E2', '-0.2432E2', '4.35656E2',
+                          '-02452E-2', '45125E-2',
+                          '1234.58965E-2', '1.521E+15', '-1E-25', '1E-25', '1254E-25', '-1203E-25',
+                          '0', '-0.00', '-0', '4585E12', '000000000000000000012', '000000000000.32E12',
+                          '00000000000000.1E+12', '000000000000.2E-32']
+
             for value in test_items:
                 numeric_table.insert().execute(numericcol=value)
 
